2001-02-26 Joseph Wenninger <jowenn@bigfoot.com>
        * First step for a plugin management dialog page
	  Soon to come

2001-02-26 Christoph Cullmann <crossfire@babylon2k.de>
        * Kant is a part of kdebase :)
	  sourceforge.net CVS won't be used in the future

2001-02-24 Phlip <phlip_cpp@my-deja.com>

	* HTML button - select text, hit <Ctrl+Dash>, and enter the fields
	  for an SGML tag. Don't enter the < > or closing tag. We put these
	  around the selected text, and [try to] re-select that text so you can add
	  another nested tag right away. We are now the first HTML editor
	  that's actually better than Notepad! Hours of fun.

	* Filter - select text, hit <Ctrl+Backslash>, and enter an OS command.
	  we pipe the selected text thru that command, such as "sort", and then
	  replace the selection with the result. Impress your friends.

2001-02-21 Joseph Wenninger <jowenn@bigfoot.com>
	* Makefile.am's			: correction for linking
	* kantmenuitem.h                : Improved menu items added doc-list
	* kantlistboxitem.h		: Improved listboxitem files-list

2001-02-19 Christoph Cullmann <crossfire@babylon2k.de>
	* kantconsole.* konsole/*       : add kantconsole widget

2001-02-16 Anders Lund <anders@alweb.dk>
	* kantmainwindow.cpp	:fixing read/write options to use maindockwindow functions.

2001-02-15 Joseph Wenninger <jowenn@bigfoot.com>
	* kantview.cpp		: Tab doesn't jump to next widget anymore, but inserts a tab into the text
	* kantmainwindow.*	: F8 / SHIFT-F8 jumps to next / previous widget

version 0.2.0-pre:
  - more splitting fixes
  - kwrite bugfix ;-)

version 0.1.0:
  - first Kant version in sourceforge.net cvs ;-)
  - (MB) added menu Plugins and Project (content following soon)
  - (MB) implemented save function for Project file
  - (MB) fixed doubled keybindings
  - (MB) changed project file structure to XML
  - (MB) opening project files is working
  - (CC) fixed bug that crashed on quit
  - (MB) added checking for menuitem-states in "project"