@@ -27,28 +27,23 @@
 
 KantApp::KantApp () : KUniqueApplication ()
 {
-  //JoWenn -- Begin
   pluginManager=new KantPluginManager(this);
-  //JoWenn -- End
   mainWindow = new KantMainWindow (pluginManager);
   mainWindow->show ();
 
   connect(this, SIGNAL(lastWindowClosed()), SLOT(quit()));
-
-
-  if (isRestored())
-    restore();
 }
 
 KantApp::~KantApp ()
 {
 }
+
 int KantApp::newInstance ()
 {
   KCmdLineArgs* args = KCmdLineArgs::parsedArgs();
 
-  // Anders: reopen documents
   mainWindow->reopenDocuments(isRestored());
+
   if (!isRestored())
   {
 
@@ -57,42 +52,11 @@ int KantApp::newInstance ()
       mainWindow->viewManager->openURL( args->url(z) );
     }
 
-
     mainWindow->raise();
   }
-    if ( mainWindow->viewManager->viewCount () == 0 )
-      mainWindow->viewManager->openURL( KURL() );
+
+  if ( mainWindow->viewManager->viewCount () == 0 )
+    mainWindow->viewManager->openURL( KURL() );
 
   return 0;
-}
-
-void KantApp::restore ()
-{
- /* KConfig *config;
-  int docs, windows, z;
-  char buf[16];
-  KWriteDoc *doc;
-  TopLevel *t;
-
-  config = kapp->sessionConfig();
-  if (!config) return;
-
-  config->setGroup("Number");
-  docs = config->readNumEntry("NumberOfDocuments");
-  windows = config->readNumEntry("NumberOfWindows");
-
-  for (z = 1; z <= docs; z++) {
-     sprintf(buf,"Document%d",z);
-     config->setGroup(buf);
-     doc = new KWriteDoc(HlManager::self());
-     doc->readSessionConfig(config);
-     docList.append(doc);
-  }
-
-  for (z = 1; z <= windows; z++) {
-    sprintf(buf,"%d",z);
-    config->setGroup(buf);
-    t = new TopLevel(docList.at(config->readNumEntry("DocumentNumber") - 1));
-    t->restore(config,z);
-  } */
 }
